# blutils

./: .gitignore  build.sh  pyproject.toml  requirements.txt
src/blutils/: __init__.py  _utils.py
src/njbpy/: __init__.py  _njbpy.py  _serializer.py
